# Mamba-S-Net

Mamba-S-Net/: .gitignore  pyproject.toml
Mamba-S-Net/conf/: config.yaml
Mamba-S-Net/msnet/: MSNet.py  apply.py  ema.py  inference.py  solver.py  train.py  wav.py
Mamba-S-Net/scripts/: prepare_dataset.py
