[project]
name = "mamba-s-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.32.1",
    "einops==0.6.1",
    "julius==0.2.7",
    "markupsafe==3.0.2",
    "ml-collections==0.1.1",
    "numpy>=1.26.4",
    "pyyaml>=6.0.3",
    "soundfile==0.12.1",
    "torch==2.9.1",
    "torchaudio>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
